# PlateMasker-Android-Public

./: .gitignore  LICENSE  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/platemasker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/timcatworld/platemasker/: AiImageService.kt  BitmapUtils.kt  Editor.kt  ImageEditorScreen.kt  LicensePlateDetector.kt  Licenses.kt  MainActivity.kt  MaskDrawing.kt  MaskProcessor.kt  Models.kt  PlateRefinement.kt  PolygonEditor.kt  SettingsManager.kt
app/src/main/java/com/timcatworld/platemasker/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/platemasker/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
sdk/libcxx_helper/: CMakeLists.txt  mask_processor.cpp
